--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,6 @@
+body {
+    margin-top: 3em;
+}
 .alert {
     border: 1px solid #ccc;
     padding: 6px;
@@ -14,3 +17,4 @@
 .alert-warning {
     background-color: darkorange;
 }
+
