Them cach xem gia pha dang dung

--- a/App/Views/GiaPha/gia_pha_dung.html
+++ b/App/Views/GiaPha/gia_pha_dung.html
@@ -36,16 +36,16 @@ Danh sách hồ sơ
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content">
-                        <div style="overflow-y: hidden">
-                            <div class="tree">
-                                {{ inGiaPhaDangCay() }}
-                            </div>
+                        <div class="multi-level card">
+                            {{inGiaPhaDangDung()}}
+                            <!-- Do qua trinh in cay gia pha bi thieu nen them 2 them </div>-->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+</div>
 </div>
 </div>
 <!-- /page content -->
