--- a/App/Views/ThanhVien/danh_sach.html
+++ b/App/Views/ThanhVien/danh_sach.html
@@ -79,7 +79,7 @@ Xin chào
                                 <td>{{user.is_active}}</td>
                                 <td>2011/04/25</td>
                                 <td>{{user.MaHoSo}}</td>
-                                <td><a href="/admin/thanhvien/chinhsua" class="btn btn-warning btn-sm">Cập nhật thông tin</a></td>
+                                <td><a href="/admin/thanhvien/{{user.id}}/chinhsua" class="btn btn-warning btn-sm">Cập nhật thông tin</a></td>
                             </tr>
                             {% endfor %}
                             </tbody>
