--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -60,7 +60,7 @@
                             </li>
                             <li><a><i class="fa fa-edit"></i> Sơ đồ gia phả <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="form.html">Dạng đứng</a></li>
+                                    <li><a href="/giapha/giaPhaDangDung">Dạng đứng</a></li>
                                     <li><a href="/giapha/index">Dạng cây</a></li>
                                     <li><a href="profile.html">Tra cứu cách xưng hô</a></li>
                                 </ul>
@@ -167,7 +167,7 @@
                                         <span>Settings</span>
                                     </a>
                                 </li>
-                                <li><a href="javascript:;">Chỉnh sửa tài khoản</a></li>
+                                <li><a href="/admin/users/chinhSua">Chỉnh sửa tài khoản</a></li>
                                 <li><a href="/logout"><i class="fa fa-sign-out pull-right"></i> Đăng xuất</a></li>
                                 <li><a href="/login#signup"><i class="fa fa-sign-out pull-right"></i> Đăng ký</a></li>
                             </ul>
