--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -145,3 +145,83 @@ right connector from last child*/
 .tree li a:hover + ul ul::before {
     border-color: #94a0b4;
 }
+
+
+/* Gia pha dang dung */
+
+.item ul,
+.multi-level input[type="checkbox"] {
+    display: none;
+}
+
+.item input:checked~ul {
+    display: block;
+}
+/*Arrow*/
+
+.arrow {
+    width: 12px;
+    height: 12px;
+    vertical-align: middle;
+    float: left;
+    z-index: 0;
+    margin: 17px 1em 0 2em;
+}
+
+.item input+.arrow {
+    transform: rotate(-90deg);
+    transition: 0.1s;
+}
+
+.item input:checked+.arrow {
+    transform: rotate(0deg);
+    transition: 0.1s;
+}
+
+.multi-level label:hover {
+    cursor: pointer;
+}
+
+.multi-level label {
+    width: 100%;
+    display: block;
+    z-index: 3;
+    position: relative;
+}
+
+.multi-level {
+    width: 100%;
+    background-color: white;
+    overflow-x: hidden;
+    border-bottom: 1px solid #CFD8DC;
+}
+
+.multi-level ul,
+.multi-level li,
+.multi-level label {
+    line-height: 50px;
+    margin: 0;
+    padding: 0 2em;
+    list-style: none;
+    text-decoration: none;
+    color: #90A4AE;
+    font-weight: 100;
+    width: 100%;
+}
+
+.item ul {
+    padding: 0 0.25em;
+}
+
+.multi-level li a {
+    line-height: 50px;
+    margin: 0;
+    padding: 0 4em;
+    list-style: none;
+    text-decoration: none;
+    color: #90A4AE;
+    font-weight: 100;
+}
+
+
+/* Het gia pha dang dung */
