Sao chep source code va upload git lai

--- a/App/Views/HoSo/chi_tiet.html
+++ b/App/Views/HoSo/chi_tiet.html
@@ -64,6 +64,12 @@ Danh sách hồ sơ
                             <a class="btn btn-success">
                                 <i class="fa fa-edit m-right-xs"></i>Chỉnh sửa hồ sơ</a>
                             <br/>
+                            <a class="btn btn-success" href="/Admin/HoSoNgoaiToc/{{hoSo.MaHoSo}}/themVoChong">
+                                <i class="fa fa-edit m-right-xs"></i>Thêm vợ/ chồng</a>
+                            <br/>
+                            <a class="btn btn-success" href="/ho-so/{{hoSo.MaHoSo}}/them-con">
+                                <i class="fa fa-edit m-right-xs"></i>Thêm con</a>
+                            <br/>
                         </div>
 
                         <div class="col-md-6 col-sm-6 col-xs-12">
