--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -69,14 +69,14 @@
                                 <ul class="nav child_menu">
                                     <li><a href="/admin/thanhvien/index">Danh sách thành viên</a></li>
                                     <li><a href="/admin/thanhvien/capquyen">Cấp quyền quản trị</a></li>
-                                    <li><a href="/admin/thanhvien/chinhsua">Thay đổi thông tin tài khoản</a></li>
+                                    <li><a href="/admin/users/chinhsua">Thay đổi thông tin tài khoản</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-table"></i> Quản lý bài viết <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="tables.html">Viết bài</a></li>
-                                    <li><a href="tables_dynamic.html">Danh sách bài viết</a></li>
-                                    <li><a href="tables_dynamic.html">Cập nhật danh mục</a></li>
+                                    <li><a href="/admin/baiviet/getThemBaiViet">Viết bài</a></li>
+                                    <li><a href="/admin/baiviet/getDanhSachBaiViet">Danh sách bài viết</a></li>
+                                    <li><a href="/admin/loaitin/index">Cập nhật danh mục</a></li>
                                     <li><a href="tables_dynamic.html">Thông báo việc tộc</a></li>
                                 </ul>
                             </li>
@@ -89,9 +89,6 @@
                                 <ul class="nav child_menu">
                                     <li><a href="/themhoso/index">Thêm hồ sơ</a></li>
                                     <li><a href="/admin/hoso/index">Danh sách hồ sơ</a></li>
-                                    <li><a href="project_detail.html">Thêm vợ</a></li>
-                                    <li><a href="contacts.html">Thêm con</a></li>
-
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-windows"></i> Admin <span class="fa fa-chevron-down"></span></a>
