--- a/App/Views/HoSo/chi_tiet.html
+++ b/App/Views/HoSo/chi_tiet.html
@@ -268,14 +268,127 @@ Danh sách hồ sơ
                         <div class="clearfix"></div>
                     </div>
                     <div class="x_content" style="display: block;">
+                        <table width="100%" border="0" cellpadding="0" cellspacing="0">
+                            <tbody>
+                            {% if hoSoOng is not null %}
+                            <tr>
+                                <td colspan="3" align="center" valign="middle">
 
-                        <div class="bs-example" data-example-id="simple-jumbotron">
-                            <div class="jumbotron">
-                                <h1>Hello, world!</h1>
-                                <p>This is a simple hero unit, a simple jumbotron-style component for calling extra
-                                    attention to featured content or information.</p>
-                            </div>
-                        </div>
+                                    <div class="hopTo">
+                                        Ông nội: <br>
+                                        <span>Đời thứ: 10 - Con thứ: 3</span><br><a
+                                            href="">{{ hoSoOng.hoten }}</a>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="3" height="10" align="center" valign="middle"><img
+                                        src="/images/down.gif"></td>
+                            </tr>
+                            {% endif %}
+
+                            {% if hoSoBo is not null %}
+                            <tr>
+                                <td colspan="3" align="center" valign="middle">
+                                    <div class="hopTo">
+                                        Bố: <br>
+                                        <span>Đời thứ: 10 - Con thứ: 3</span><br><a
+
+                                            href="">{{ hoSoBo.HoTen }}</a>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td colspan="3" height="10" align="center" valign="middle"><img
+                                        src="/images/down.gif"></td>
+                            </tr>
+                            {% endif %}
+                            {% set count = dsAnhEm|length %}
+                            {% if count == 0 %}
+                            {% set count = 1 %}
+                            {% endif %}
+                            {% set percent = 100/count %}
+                            {% set linePercent = 100/count %}
+                            {% set marginPercent = linePercent/2 %}
+                            {% set viTri = 0 %}
+                            <tr>
+                                <td colspan="3" align="center" style="position: relative"><img
+                                        src="/images/VLine.jpg" width="{{linePercent*(count-1)}}%"
+                                        height="1px" style="position: absolute; left: {{marginPercent}}%">
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                        <tr>
+                                            {% for anhEm in dsAnhEm %}
+                                            <td width="{{percent}}%" align="center" valign="top"
+                                                style="vertical-align:middle;">
+                                                <div align="center"><img
+                                                        src="/images/down.gif"></div>
+                                                <div class="hopNho" style="{% if anhEm.MaHoSo == hoSo.MaHoSo %} background-color: darkred {% endif %}">
+                                                    Anh em: <br>
+                                                    <span>Đời thứ: 10 - Con thứ: 3</span><br><a
+                                                        style="color: chocolate;"
+                                                        href="">{{ anhEm.HoTen }}</a>
+                                                </div>
+                                            </td>
+                                            {% endfor %}
+                                        </tr>
+                                        <tr>
+                                            {% set viTri = 0 %}
+                                            {% set break = 0 %}
+                                            {% set position = 0 %}
+                                                {% for anhEm in dsAnhEm if break == 0 %}
+                                                    {% set viTri = viTri+1 %}
+                                                    {% if anhEm.MaHoSo == hoSo.MaHoSo %}
+                                                        {% set break = 1 %}
+                                                        {% set position = viTri %}
+                                                    {% else %}
+                                                        <td></td>
+                                                    {% endif %}
+                                                {% endfor %}
+
+                                            <td align="center" valign="middle"><img src="/images/down.gif"></td>
+
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                            <tr>
+                                {% set count = dsCon|length %}
+                                {% if count == 0 %}
+                                {% set count = 1 %}
+                                {% endif %}
+                                {% set percent = 100/count %}
+                                {% set linePercent = 100/count %}
+                                {% set marginPercent = linePercent/2 %}
+                                {% set viTri = 0 %}
+
+
+                                <td colspan="3" align="center" style="position: relative"><img
+                                        src="/images/VLine.jpg" width="{{linePercent*(count-1)}}%"
+                                        height="1px" style="position: absolute; left: {{marginPercent}}%">
+                                    <table width="100%" border="0" cellspacing="0" cellpadding="0">
+                                        <tbody>
+                                        <tr>
+                                            {% for con in dsCon %}
+                                            <td width="{{percent}}%" align="center" valign="top"
+                                                style="vertical-align:middle; height: 200px; float: left">
+                                                <div align="center"><img
+                                                        src="/images/down.gif"></div>
+                                                <div class="hopNho">
+                                                    Con: <br>
+                                                    <span>Đời thứ: 10 - Con thứ: 3</span><br><a
+                                                        href="">{{con.hoten}}</a>
+                                                </div>
+                                            </td>
+                                            {% endfor %}
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
 
                     </div>
                 </div>
