--- a/App/Views/BaiViet/chinh_sua_bai_viet.html
+++ b/App/Views/BaiViet/chinh_sua_bai_viet.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}
-Danh sách hồ sơ
+Chỉnh sửa bài viết
 {% endblock %}
 {% block body %}
 <!-- page content -->
@@ -8,7 +8,7 @@ Danh sách hồ sơ
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Thêm bài viết mới</h3>
+                <h3>Chỉnh sửa bài viết</h3>
             </div>
 
             <div class="title_right">
@@ -48,7 +48,7 @@ Danh sách hồ sơ
                                 <span class="required">*</span>
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                <input type="text" name="tieuDe" required="required" class="form-control col-md-7 col-xs-12">
+                                <input type="text" name="tieuDe" required="required" value="{{baiViet.TieuDe}}" class="form-control col-md-7 col-xs-12">
                             </div>
                         </div>
                         <div class="form-group">
@@ -56,7 +56,7 @@ Danh sách hồ sơ
                                 <span class="required">*</span>
                             </label>
                             <div class="col-md-6 col-sm-6 col-xs-12">
-                                <textarea name="noiDung" style="width: 100%" rows="10"></textarea>
+                                <textarea name="noiDung" style="width: 100%" rows="10">{{baiViet.NoiDung |raw}}</textarea>
                             </div>
                         </div>
 
