--- a/App/Views/HoSo/chi_tiet.html
+++ b/App/Views/HoSo/chi_tiet.html
@@ -267,7 +267,7 @@ Danh sách hồ sơ
                         </ul>
                         <div class="clearfix"></div>
                     </div>
-                    <div class="x_content" style="display: block;">
+                    <div class="x_content" style="overflow: hidden">
                         <table width="100%" border="0" cellpadding="0" cellspacing="0">
                             <tbody>
                             {% if hoSoOng is not null %}
@@ -323,7 +323,7 @@ Danh sách hồ sơ
                                                 style="vertical-align:middle;">
                                                 <div align="center"><img
                                                         src="/images/down.gif"></div>
-                                                <div class="hopNho" style="{% if anhEm.MaHoSo == hoSo.MaHoSo %} background-color: darkred {% endif %}">
+                                                <div class="hopNho" style="{% if anhEm.MaHoSo == hoSo.MaHoSo %} background-image: url('/images/phado_c.gif'); {% endif %}">
                                                     Anh em: <br>
                                                     <span>Đời thứ: 10 - Con thứ: 3</span><br><a
                                                         style="color: chocolate;"
@@ -389,7 +389,6 @@ Danh sách hồ sơ
                             </tr>
                             </tbody>
                         </table>
-
                     </div>
                 </div>
             </div>
