--- a/App/Views/LoaiTin/index.html
+++ b/App/Views/LoaiTin/index.html
@@ -28,19 +28,23 @@ Danh sách hồ sơ
         <div class="row">
             <div class="col-md-12">
                 <div class="x_panel">
-                    {% for loaiTin in dsLoaiTin %}
-                        {{ loaiTin.MaLoaiTin }} - {{loaiTin.TenLoaiTin}} <br>
-                    {% endfor %}
-                    <!-- Small modal -->
-                    <br>
-                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalThemDanhMuc"><i class="fa fa-plus"></i>Thêm danh mục</button>
+                    <ul class="list-group">
+                        {% for loaiTin in dsLoaiTin %}
+                        <li class="list-group-item">{{ loaiTin.MaLoaiTin }} - {{loaiTin.TenLoaiTin}} <button class="btn btn-warning">Xóa</button></li>
+                        {% endfor %}
+                    </ul>
+                    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#modalThemDanhMuc"><i
+                            class="fa fa-plus"></i>Thêm danh mục
+                    </button>
 
+                    <!-- Small modal -->
                     <div class="modal fade" id="modalThemDanhMuc" tabindex="-1" role="dialog" aria-hidden="true">
                         <div class="modal-dialog modal-sm">
                             <div class="modal-content">
 
                                 <div class="modal-header">
-                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">×</span>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                                            aria-hidden="true">×</span>
                                     </button>
                                     <h4 class="modal-title" id="myModalLabel2">Thêm danh mục</h4>
                                 </div>
@@ -57,7 +61,8 @@ Danh sách hồ sơ
                                 </div>
                                 <div class="modal-footer">
                                     <button class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                    <button class="btn btn-success" type="submit" form="danh-muc" value="Submit">Thêm</button>
+                                    <button class="btn btn-success" type="submit" form="danh-muc" value="Submit">Thêm
+                                    </button>
                                 </div>
 
                             </div>
