Chinh sua giao dien hover menu

--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -266,7 +266,10 @@
 <script src="/js/jquery.dataTables.min.js"></script>
 <script src="/js/dataTables.bootstrap.min.js"></script>
 <!-- Custom Theme Scripts -->
+<script src="/js/app.js"></script>
 <script src="/js/custom.min.js"></script>
+
+
 {% block footer %}
 {% endblock %}
 </body>
