--- a/App/Views/GiaPha/gia_pha_dung.html
+++ b/App/Views/GiaPha/gia_pha_dung.html
@@ -3,6 +3,52 @@
 Danh sách hồ sơ
 {% endblock %}
 {% block body %}
+<style>
+    .dropbtn {
+        color: white;
+        border: none;
+        cursor: pointer;
+    }
+
+    /* The container <div> - needed to position the dropdown content */
+    .dropdown {
+        position: relative;
+        display: inline-block;
+    }
+
+    /* Dropdown Content (Hidden by Default) */
+    .dropdown-content {
+        display: none;
+        position: absolute;
+        background-color: #f9f9f9;
+        min-width: 160px;
+        top: 2em;
+        left: 199px;
+        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+        z-index: 9999;
+    }
+
+    /* Links inside the dropdown */
+    .dropdown-content a {
+        color: black;
+        text-decoration: none;
+        display: block;
+        padding: 0 0 0 1.5em !important;
+
+    }
+
+    /* Change color of dropdown links on hover */
+    .dropdown-content a:hover {background-color: #f1f1f1}
+
+    /* Show the dropdown menu on hover */
+    .dropdown:hover .dropdown-content {
+        display: block;
+    }
+
+    /* Change the background color of the dropdown button when the dropdown content is shown */
+    .dropdown:hover .dropbtn {
+    }
+</style>
 <!-- page content -->
 <div class="right_col" role="main">
     <div class="">
